[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "feedback-analyzer-ai-mcp"
version = "1.0.0"
description = "Feedback Analyzer Ai tools for AI agents. Capabilities: analyze feedback, extract themes, sentiment trend. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "feedback", "analyzer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/feedback-analyzer-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
feedback_analyzer_ai_mcp = "server:main"
